# set_transformer

./: .gitignore  README.md  collect_ant_tag_pf_dataset.py  generate_pomdp_dataset.py  odd_even_pomdp.py  particle_filter_ant_heaven_hell.py  particle_filter_ant_tag.py  particle_filter_box_env.py  particle_filter_car_env.py  pyproject.toml  sample_data.npy.eval.npy  sample_data.npy.train.npy  sanity_check_fully_observed.py  sb3_end_to_end.py  sb3_pretrained_processor.py  setup.py  visualize_st_reconstruction.py
data/: dataset.py  raw_to_numpy.py
environments/: __init__.py  odd_even_env.py  odd_even_st_wrapper.py  odd_even_utils.py
features_extractors/: set_transformer_pretrained_processor.py
particle_filters/: ant_tag_pf.py
particle_reconstruction_results/: belief_errors.npy  model.pth  test_loss.npy  train_losses.npy  val_losses.npy
sb3_ant_tag_pretrained_logs/: evaluations.npz
set_transformer/: data_modelnet40.py  loss.py  mixture_of_mvns.py  models.py  modules.py  mvn_diag.py  plots.py  run.py  run_pomdp_pretraining.py  visualize_particles.py
tests/: conftest.py  test_benchmark_registry.py  test_benchmark_results.py  test_car_flag_pf.py  test_dataset.py  test_feature_extractors.py  test_loss.py  test_models.py  test_modules.py  test_plots.py  test_raw_to_numpy.py  test_run.py  test_run_pomdp_pretraining.py  test_shaping.py
training/: eval_odd_even_pretrained.py  eval_true_reward.py  sample_and_render_odd_even.py  sample_and_render_trajectories.py  train_ant_tag_finetune.py  train_ant_tag_pretrained.py  train_ant_tag_st.py  train_e2e.py  (+3 more)
(+139 files in other folders)
